[package]
name = "emoji-clock-2"
description = "Convert time and chrono types to emojis"
version = "0.2.0"
edition = "2021"
authors = ["Guillermo Lloret Talavera <GuillerLT@gmail.com>"]
homepage = "https://github.com/GuillerLT/emoji-clock-2"
repository = "https://github.com/GuillerLT/emoji-clock-2"
license = "MIT"
documentation = "https://docs.rs/emoji-clock-2"
readme = "README.md"
keywords = ["emoji", "clock"]
categories = ["date-and-time", "encoding", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3", optional = true, default-features = false }
chrono = { version = "0.4", optional = true, default-features = false }

[features]
full = ["time", "chrono"]
